--- a/main.html
+++ b/main.html
@@ -1,3 +1,22 @@
-<div id="container">
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Windows Azure Loading Style With Canvas</title>
+  
+  
+  
+      <link rel="stylesheet" href="canvas.css">
+
+  
+</head>
+
+<body>
+  <div id="container">
     <canvas id="canvas" width="150" height="150"></canvas>
 </div>
+  
+    <script  src="canvas.js"></script>
+
+</body>
+</html>
